# rs-msgr

./: Cargo.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
types/: Cargo.toml  build.rs
types/src/: lib.rs  types.proto
